--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -18,10 +18,10 @@ p#notice
 = link_to "CSV出力", event_path(@event, format: :csv, search: :q), class: "btn btn-default", role: 'button'
 - unless @event.is_fixed == true
   | 　
-  = link_to "データ確定", fix_event_path(@event), class: "btn btn-default fix", role: 'button'
+  = link_to "データ確定", fix_event_path(@event), class: "btn btn-default fix", role: 'button', data: { confirm: 'データを確定します。よろしいですか？' }
 - else
   | 　
-  = link_to "確定取消", fix_event_path(@event, q: :reset), class: "btn btn-default", role: 'button'
+  = link_to "確定取消", fix_event_path(@event, q: :reset), class: "btn btn-default", role: 'button', data: { confirm: 'データ確定を取り消します。よろしいですか？' }
 br
 br
 ul.nav.nav-tabs
@@ -84,7 +84,7 @@ table.table.table-bordered.table-sm
       - @fixed_customer_activities.each do |fca|
         tr
           td = fca.person.name
-          td = fca.person.company_short_name
+          td = fca.person.company&.short_name
           td = fca.person.position
           td = fca.person.contact_tel
           td = fca.person.contact_email
@@ -101,7 +101,7 @@ table.table.table-bordered.table-sm
         - @customer_activities.each do |cac|
           tr
             td = cac.person.name
-            td = cac.person.company_short_name
+            td = cac.person.company&.short_name
             td = cac.person.position
             td = cac.person.contact_tel
             td = cac.person.contact_email
@@ -117,7 +117,7 @@ table.table.table-bordered.table-sm
         - @customers.each do |c|
           tr
             td = c.name
-            td = c.company_short_name
+            td = c.company&.short_name
             td = c.position
             td = c.contact_tel
             td = c.contact_email
@@ -151,7 +151,7 @@ table.table.table-bordered.table-sm
       - @fixed_advisor_activities.each do |faa|
         tr
           td = faa.person.name
-          td = faa.person.company_short_name
+          td = faa.person.company&.short_name
           td = faa.person.position
           td = faa.person.contact_tel
           td = faa.person.contact_email
@@ -168,7 +168,7 @@ table.table.table-bordered.table-sm
         - @advisor_activities.each do |aac|
           tr
             td = aac.person.name
-            td = aac.person.company_short_name
+            td = aac.person.company&.short_name
             td = aac.person.position
             td = aac.person.contact_tel
             td = aac.person.contact_email
@@ -184,7 +184,7 @@ table.table.table-bordered.table-sm
         - @advisors.each do |a|
           tr
             td = a.name
-            td = a.company_short_name
+            td = a.company&.short_name
             td = a.position
             td = a.contact_tel
             td = a.contact_email
