--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,15 +1,3 @@
-= javascript_include_tag "https://ajaxzip3.github.io/ajaxzip3.js"
-- content_for :javascript
-  javascript:
-    document.addEventListener("DOMContentLoaded", function() {
-      AutoKana.bind("#name", "#kana")
-    });
-    document.addEventListener("change", function() {
-      document.getElementById('kana').value = document.getElementById('kana').value.replace(/[\u3041-\u3096]/g, function(match) {
-        var chr = match.charCodeAt(0) + 0x60
-        return String.fromCharCode(chr)
-      });
-    });
 doctype html
 html
   head
@@ -19,12 +7,16 @@ html
     title
       | TC名簿管理システム
     = csrf_meta_tags
-    /= stylesheet_link_tag    'https://fonts.googleapis.com/icon?family=Material+Icons'
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+
   body
     .container
-      h1 TopConnect名簿管理システム
+      h4.col-md-11 TopConnect名簿管理システム
+      - if current_admin.role_type == 1
+        = link_to 'ユーザー管理', '/admin/admin', class: 'btn btn-default btn-xs col-md-1'
+      br
+      br
       ul.nav.nav-tabs
         - if admin_signed_in?
           - if current_admin.role_type <= 2
@@ -33,15 +25,10 @@ html
             li.nav-item
               = link_to '参加者一覧', advisors_path
             li.nav-item
+              = link_to '会社一覧', companies_path
+            li.nav-item
               = link_to 'イベント一覧', events_path
-            - if current_admin.role_type == 1
-              li.nav-item
-                = link_to 'ユーザー一覧', admins_path
           li.nav-item
             = link_to 'ログアウト', destroy_admin_session_path, method: :delete
-      /p.notice
-        = notice
-      /p.alert
-        = alert
       = yield :javascript
       = yield
