--- a/app/views/people/_customer_form.html.slim
+++ b/app/views/people/_customer_form.html.slim
@@ -28,13 +28,7 @@
   = form.text_field :kana, class: 'col-5 col-md-3', id: 'kana', value: @customer.kana
 .field.row
   = form.label :company, '会社', class: 'col-5 col-md-2'
-  = form.text_field :company, class: 'col-5 col-md-3', value: @customer.company
-.field.row
-  = form.label :company_short_name, '会社（略称）', class: 'col-5 col-md-2'
-  = form.text_field :company_short_name, class: 'col-5 col-md-3', value: @customer.company_short_name
-.field.row
-  = form.label :company_kana, '会社（カナ）', class: 'col-5 col-md-2'
-  = form.text_field :company_kana, class: 'col-5 col-md-3', value: @customer.company_kana
+  = form.select :company_id, @companies.map{|t| [t.name, t.id]}, class: 'col-5 col-md-3', selected: @customer.company_id
 .field.row
   = form.label :position, '役職', class: 'col-5 col-md-2'
   = form.text_field :position, class: 'col-5 col-md-3', value: @customer.position
