--- a/app/views/people/advisor_show.html.slim
+++ b/app/views/people/advisor_show.html.slim
@@ -15,24 +15,29 @@ h2 参加者データ詳細
     = @advisor.name
 .row
   strong.col-5.col-md-2
-    | フリガナ:
+    | 氏名カナ:
   .col-5.col-md-3
     = @advisor.kana
 .row
   strong.col-5.col-md-2
-    | 会社:
+    | 会社名:
   .col-5.col-md-3
-    = @advisor.company
+    = @advisor.company&.name
 .row
   strong.col-5.col-md-2
-    | 会社（略称）:
+    | 会社名カナ:
   .col-5.col-md-3
-    = @advisor.company_short_name
+    = @advisor.company&.kana
 .row
   strong.col-5.col-md-2
-    | 会社（カナ）:
+    | 会社略称:
   .col-5.col-md-3
-    = @advisor.company_kana
+    = @advisor.company&.short_name
+.row
+  strong.col-5.col-md-2
+    | 会社略称カナ:
+  .col-5.col-md-3
+    = @advisor.company&.short_name_kana
 .row
   strong.col-5.col-md-2
     | 役職:
