--- a/app/views/people/customer_new.html.slim
+++ b/app/views/people/customer_new.html.slim
@@ -1,3 +1,14 @@
+- content_for :javascript
+  javascript:
+    document.addEventListener("DOMContentLoaded", function() {
+      AutoKana.bind("#name", "#kana")
+    });
+    document.addEventListener("change", function() {
+      document.getElementById('kana').value = document.getElementById('kana').value.replace(/[\u3041-\u3096]/g, function(match) {
+        var chr = match.charCodeAt(0) + 0x60
+        return String.fromCharCode(chr)
+      });
+    });
 .row
   p#notice
     = notice
