adminをrails_admin使わないよう修正

--- a/app/views/admins/index.html.slim
+++ b/app/views/admins/index.html.slim
@@ -1,5 +1,8 @@
 h2 ユーザー一覧
 br
+= link_to '新規作成', new_admin_path, class: 'btn btn-default btn-sm', role: 'button'
+br
+br
 table.table.table-bordered.table-sm
   thead.thread-light
     tr
