--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,8 @@ html
     .container
       h4.col-md-11 TopConnect名簿管理システム
       - if current_admin&.role_type == 1
-        = link_to 'ユーザー管理', '/admin/admin', class: 'btn btn-default btn-xs col-md-1'
+        /= link_to 'ユーザー管理', '/admin/admin', class: 'btn btn-default btn-xs col-md-1'
+        = link_to 'ユーザー管理', '/admins', class: 'btn btn-default btn-xs col-md-1'
       br
       br
       ul.nav.nav-tabs
